--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,8 @@
+---
+import "../styles/global.css";
+import {Nav} from "./Nav.jsx"
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -7,7 +12,8 @@
 		<meta name="generator" content={Astro.generator} />
 		<title>Astro Basics</title>
 	</head>
-	<body>
+  <body>
+    {Nav}
 		<slot />
 	</body>
 </html>
