[Nav Development | Items Mapped v0.2]

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,7 +13,7 @@ import {Nav} from "./Nav.jsx"
 		<title>Astro Basics</title>
 	</head>
   <body>
-    {Nav}
+    <Nav/>
 		<slot />
 	</body>
 </html>
