--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
-import {Nav} from "./Nav.jsx"
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <!doctype html>
@@ -10,11 +11,12 @@ import {Nav} from "./Nav.jsx"
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Cruz Roja</title>
 	</head>
   <body>
-    <Nav/>
-		<slot />
+    <Header/>
+    <slot />
+    <Footer/> 
 	</body>
 </html>
 
