--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,14 @@
 ---
 import Layout from '../layouts/Layout.astro';
 import Home from './Home.astro'
+import {MapsData} from "../api/MapsData.jsx"
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
 
 <Layout>
   <div class="bg-black h-screen">
-  <p class="text-3xl text-white">Soy Home</p>
+    <p class="text-3xl text-white">Soy Home</p>
+    <MapsData/>
 </div>
 </Layout>
