Nav Improvement | Responsive Mobile (>‿◠)✌

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,26 +1,23 @@
----
-
-import {Nav} from "../components/Nav.jsx"
-
----
 
 
-<header>
 
-<Nav/>
+
+  <header class="h-30 bg-red-500">
+
+    {/*
+
   <!--Cruz Roja Logo
 
   <img src=""/>
-
--->
-
-
 
   <!--Cruz Roja Redes Sociales
 
   <ul>
 <li><i src></li>
   </ul>
-  -->
+
+    */}
 
 </header>
+
+
