--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import "../styles/global.css";
-import Header from "../components/Header.astro";
+import Header from "../components/Header.astro"
+import {Nav} from "../components/Nav.jsx";
 import Footer from "../components/Footer.astro";
 ---
 
@@ -9,12 +10,17 @@ import Footer from "../components/Footer.astro";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css"
+    />
 		<meta name="generator" content={Astro.generator} />
-		<title>Cruz Roja</title>
+		<title>Cruz Roja - Filial Al. Brown</title>
 	</head>
   <body>
     <Header/>
+    <Nav client:load/>
     <slot />
     <Footer/> 
 	</body>
