--- a/src/pages/Contacto.astro
+++ b/src/pages/Contacto.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro"
 <Layout>
   <div class="bg-black h-screen">
   <p class="text-3xl text-white">Soy Contacto</p>
+  <p class="text-3xl text-white">Llamada a la API de Google Maps</p>
 </div>
 </Layout>
 
