--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,10 +9,9 @@ import Carrousel from "../components/Carrousel.astro"
 
 <Layout>
   <div class="bg-black h-screen">
-    <p class="text-3xl text-white">Soy Home</p>
     <MapsData/>
     <Carrousel/>
-  </div>
 
-  
+    <p class="text-3xl text-black">Palabras lindas?</p>
+  </div>
 </Layout>
