--- a/src/components/Carrousel.astro
+++ b/src/components/Carrousel.astro
@@ -145,11 +145,16 @@ carousel.addEventListener("touchend", dragStop);
     object-fit:contain;
     user-select: none;
     margin-left: 14px;
-    width: calc(100% / 3);
+    width:calc(100% / 3);
     border-bottom: solid 1px rgba(255, 255, 255, 0.46);
     border-top: solid 1px rgba(255, 255, 255, 0.46);
     
-  }
+}
+
+
+    .carousel {
+      pointer-events: none;
+    }
   .carousel img:first-child{
     margin-left: 0px;
   }
@@ -178,7 +183,7 @@ carousel.addEventListener("touchend", dragStop);
 </style>
 
 <div class="box">
-<div class="wrapper">
+    <div class="wrapper">
             <i id="left" class="fa-solid fa-angle-left"></i>
 
             <div class="carousel flex">
@@ -190,6 +195,5 @@ carousel.addEventListener("touchend", dragStop);
             </div>
 
             <i id="right" class="fa-solid fa-angle-right"></i>
-          </div>
-
+    </div>
 </div>
