--- a/src/pages/Carreras.astro
+++ b/src/pages/Carreras.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro"
 <Layout>
   <div class="bg-black h-screen">
   <p class="text-3xl text-white">Soy Carreras</p>
+  <p class="text-3xl text-white">Aquí irán enlaces de inscripción a la web de sede central</p>
 </div>
 </Layout>
 
