--- a/src/pages/Vacunatorio.astro
+++ b/src/pages/Vacunatorio.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro"
 <Layout>
   <div class="bg-black h-screen">
   <p class="text-3xl text-white">Soy Vacunatorio</p>
+  <p class="text-3xl text-white">Aquí irán los horarios</p>
 </div>
 </Layout>
 
