Nav Improvement | Dinamic Arrow in Data.js Added v0.5~

--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,3 +1,12 @@
+
+<!--
+
+Example file of Astro that appear when I created 
+the Astro project.
+
+-->
+
+
 ---
 import astroLogo from '../assets/astro.svg';
 import background from '../assets/background.svg';
