Nav Improvement | Position sticky added xddd v0.6

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ import Footer from "../components/Footer.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>Cruz Roja - Filial Al. Brown</title>
 	</head>
-  <body>
+<body className="">
     <Header/> 
     <Nav client:load/>
     <slot />
