Web Improvement | Custom CSS Details

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,11 @@
 
 <!--Generic info to discuss later with Agus-->
 
-<footer class="bg-white">
-  <ul>
+<footer class="bg-red h-auto w-full">
+  <ul class="grid bg-my-footer">
+    <li>Soy un footer</li>
+    <li>Soy un footer</li>
+    <li>Soy un footer</li>
     <li>Soy un footer</li>
   </ul>
 </footer>
