--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@ Brand of all the pages from the webpage.
 It has social media icons and the redcross brand-icon 
 -->
 
-  <header class="h-25 bg-red-500">
+  <header class="h-25 bg-my-header">
 
     {/*
 
