--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import Carrousel from "../components/Carrousel.astro"
 ---
 
 <Layout>
-  <div class="bg-black h-screen">
+  <div class="bg-black"> <!--Acá habia un Footer-->
     <MapsData/>
     <Carrousel/>
 
